chore(deps): updated linting and formatting globally
- moved linting and formatting dependencies to root
- cleaned up mismatch on custom linting config
- fixed imports

AV-134

--- a/apps/docs/pages/custom.css
+++ b/apps/docs/pages/custom.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 article {
-  @apply prose dark:prose-invert lg:prose-lg;
+  @apply prose-slate dark:prose-invert lg:prose-lg;
 }
 
 @font-face {
@@ -22,5 +22,5 @@ body,
 }
 
 article {
-  @apply prose dark:prose-invert lg:prose-lg;
+  @apply prose-slate dark:prose-invert lg:prose-lg;
 }
