refactor: _app.tsx to _app.mdx for better performance

--- a/apps/docs/pages/custom.css
+++ b/apps/docs/pages/custom.css
@@ -19,6 +19,12 @@ html,
 body,
 :root {
   @apply h-full text-base antialiased;
+  font-family: 'Mona Sans';
+  font-weight: 200 900;
+  font-display: block;
+  font-style: normal;
+  font-stretch: 75% 125%;
+  src: url('../../../public/Mona-Sans.var.woff2') format('woff2');
 }
 
 article {
