style(prose): check and update front end styles globally #29
- updated `prose` class globally to `prose prose-slate` because that's how it should have been
- updated styles on mdx blog
- updated styles on use-case slug page too
- updated styles on `apps/docs` to incorporate the right `prose` classes

--- a/apps/docs/pages/custom.css
+++ b/apps/docs/pages/custom.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 article {
-  @apply prose-slate p-6 dark:prose-invert lg:prose-lg lg:p-12;
+  @apply prose prose-slate m-4 dark:prose-invert lg:prose-lg md:m-8 lg:m-12 xl:m-16;
 }
 
 article h1,
